# curs

Curs_Privat/Curs_folder/: pyproject.toml  sum.py
Curs_Privat/Curs_folder/curs_package/: curs.py
